tests/fixtures/type_checker/error/complex_type_implict_cast.galaxy
void complex_type_implict_cast()
{
    point p;
    abilcmd abil;
    text txt;
    playergroup plg;

    p = abil;
    plg = txt;
}
